@@ -1,10 +1,10 @@
-# $Id: config.rb,v 1.54 2005-06-21 06:33:49 fdiary Exp $
+# $Id: config.rb,v 1.55 2005-06-23 07:37:52 fdiary Exp $
 # Copyright (C) 2004-2005 Kazuhiko <kazuhiko@fdiary.net>
 #
 # TADA Tadashi <sho@spc.gr.jp> holds the copyright of Config class.
 
 HIKI_VERSION  = '0.8.0'
-HIKI_RELEASE_DATE = '2005-06-21'
+HIKI_RELEASE_DATE = '2005-06-23'
 
 require 'cgi'
 require 'hiki/command'
